--- a/css/style.css
+++ b/css/style.css
@@ -72,8 +72,69 @@ nav .nav-right button {
 
 .container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 94vh;
   width: 100%;
+}
+.container .logo {
+  width: 30.2rem;
+  margin-bottom: 2rem;
+}
+.container .search-area .search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2.5rem;
+}
+.container .search-area .search .search-img {
+  transform: translateX(3.6rem);
+}
+.container .search-area .search input {
+  width: 100%;
+  max-width: 60rem;
+  height: 4rem;
+  border-radius: 24px;
+  border: 0;
+  border: 1px solid lightgray;
+  padding-left: 50px;
+}
+.container .search-area .search input:focus {
+  outline: none;
+}
+.container .search-area .search .ses img {
+  width: 2rem;
+  transform: translateX(-3.6rem);
+}
+.container .tool-btn .btn-item {
+  margin-right: 0.6rem;
+  width: 13rem;
+  height: 3rem;
+  border-radius: 5px;
+  border: 0;
+  color: #9b8d8d;
+  transition: all 0.5s;
+}
+.container .tool-btn .btn-item:hover {
+  background-color: thistle;
+}
+
+footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 2rem;
+  background-color: #f2f2f2;
+}
+footer .left a {
+  padding-right: 1rem;
+  color: #555555;
+}
+footer .right a {
+  padding-left: 1rem;
+  color: #555555;
 }
